@@ -112,20 +112,6 @@ end_import
 
 begin_import
 import|import
-name|com
-operator|.
-name|google
-operator|.
-name|common
-operator|.
-name|annotations
-operator|.
-name|VisibleForTesting
-import|;
-end_import
-
-begin_import
-import|import
 name|org
 operator|.
 name|apache
@@ -394,9 +380,7 @@ specifier|public
 name|Krb5HttpClientBuilder
 parameter_list|()
 block|{    }
-comment|/**    * The jaasConfig is static, which makes it problematic for testing in the same jvm.    * Call this function to regenerate the static config (this is not thread safe).    */
-annotation|@
-name|VisibleForTesting
+comment|/**    * The jaasConfig is static, which makes it problematic for testing in the same jvm.    * Call this function to regenerate the static config (this is not thread safe).    * Note: only used for tests    */
 DECL|method|regenerateJaasConfiguration
 specifier|public
 specifier|static
