@@ -58,7 +58,27 @@ name|java
 operator|.
 name|util
 operator|.
+name|Arrays
+import|;
+end_import
+
+begin_import
+import|import
+name|java
+operator|.
+name|util
+operator|.
 name|Collections
+import|;
+end_import
+
+begin_import
+import|import
+name|java
+operator|.
+name|util
+operator|.
+name|HashSet
 import|;
 end_import
 
@@ -113,34 +133,6 @@ operator|.
 name|regex
 operator|.
 name|Pattern
-import|;
-end_import
-
-begin_import
-import|import
-name|com
-operator|.
-name|google
-operator|.
-name|common
-operator|.
-name|collect
-operator|.
-name|ImmutableList
-import|;
-end_import
-
-begin_import
-import|import
-name|com
-operator|.
-name|google
-operator|.
-name|common
-operator|.
-name|collect
-operator|.
-name|ImmutableSet
 import|;
 end_import
 
@@ -316,9 +308,13 @@ name|String
 argument_list|>
 name|IP_SNITCHES
 init|=
-name|ImmutableList
+name|Collections
 operator|.
-name|of
+name|unmodifiableList
+argument_list|(
+name|Arrays
+operator|.
+name|asList
 argument_list|(
 literal|"ip_1"
 argument_list|,
@@ -327,6 +323,7 @@ argument_list|,
 literal|"ip_3"
 argument_list|,
 literal|"ip_4"
+argument_list|)
 argument_list|)
 decl_stmt|;
 DECL|field|tags
@@ -339,15 +336,17 @@ name|String
 argument_list|>
 name|tags
 init|=
-name|ImmutableSet
+name|Collections
 operator|.
-expr|<
-name|String
-operator|>
-name|builder
-argument_list|()
+name|unmodifiableSet
+argument_list|(
+operator|new
+name|HashSet
+argument_list|<>
+argument_list|(
+name|Arrays
 operator|.
-name|add
+name|asList
 argument_list|(
 name|NODE
 argument_list|,
@@ -360,15 +359,17 @@ argument_list|,
 name|DISK
 argument_list|,
 name|ROLE
+argument_list|,
+literal|"ip_1"
+argument_list|,
+literal|"ip_2"
+argument_list|,
+literal|"ip_3"
+argument_list|,
+literal|"ip_4"
 argument_list|)
-operator|.
-name|addAll
-argument_list|(
-name|IP_SNITCHES
 argument_list|)
-operator|.
-name|build
-argument_list|()
+argument_list|)
 decl_stmt|;
 annotation|@
 name|Override
