@@ -26,21 +26,55 @@ name|java
 operator|.
 name|util
 operator|.
+name|Arrays
+import|;
+end_import
+
+begin_import
+import|import
+name|java
+operator|.
+name|util
+operator|.
+name|Collections
+import|;
+end_import
+
+begin_import
+import|import
+name|java
+operator|.
+name|util
+operator|.
+name|HashSet
+import|;
+end_import
+
+begin_import
+import|import
+name|java
+operator|.
+name|util
+operator|.
 name|Set
 import|;
 end_import
 
 begin_import
 import|import
-name|com
+name|org
 operator|.
-name|google
+name|apache
+operator|.
+name|solr
 operator|.
 name|common
 operator|.
-name|collect
+name|cloud
 operator|.
-name|ImmutableSet
+name|rule
+operator|.
+name|ImplicitSnitch
 import|;
 end_import
 
@@ -65,13 +99,23 @@ name|Class
 argument_list|>
 name|WELL_KNOWN_SNITCHES
 init|=
-name|ImmutableSet
+name|Collections
 operator|.
-name|of
+name|unmodifiableSet
+argument_list|(
+operator|new
+name|HashSet
+argument_list|<>
+argument_list|(
+name|Arrays
+operator|.
+name|asList
 argument_list|(
 name|ImplicitSnitch
 operator|.
 name|class
+argument_list|)
+argument_list|)
 argument_list|)
 decl_stmt|;
 DECL|method|getTags
